--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
             </div>
             <input class="btn btn-success w-100" type="submit" value="SIGN IN">
         </form>
-        <a href="/views/registration.html" class="nav-link container align-item-center justify-content-between d-flex ">New to WHC? Sign up</a>
+        <a href="/registration.html" class="nav-link container align-item-center justify-content-between d-flex ">New to WHC? Sign up</a>
     </div>
 
 </body>
