--- a/read_more.html
+++ b/read_more.html
@@ -13,7 +13,7 @@
     <nav class="navbar bg-transparent navbar-light p-3 navbar-expand-lg">
         <div class="container">
          
-            <a href="/views/blog.html" class="navbar-brand">WEB HOSTING CA.</a>
+            <a href="/blog.html" class="navbar-brand">WEB HOSTING CA.</a>
             <div class="navbar-brand">
                 <a href="#" class="navbar-left">
                   
@@ -33,16 +33,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto" >
                     <li class="nav-item">
-                        <a href="/views/blog.html" class="nav-link ">Blog</a>
+                        <a href="/blog.html" class="nav-link ">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/views/read_more.html" class="nav-link">Read mroe</a>
+                        <a href="/read_more.html" class="nav-link">Read mroe</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/views/registration.html" class="nav-link">Sign up</a>
+                        <a href="/registration.html" class="nav-link">Sign up</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/views/login.html" class="nav-link">Log in</a>
+                        <a href="/login.html" class="nav-link">Log in</a>
                     </li>
                 </ul>
                 <!-- This is the search bar! -->
@@ -101,7 +101,7 @@
   <h1>More articles</h1>
   <div class="col-lg-6 mx-auto">
       <p class="lead m-4">Do you know that? We have lots of articles to read, please click the link below to access more topics!</p>
-      <button href="/views/blog.html" class="btn btn-primary btn-lg ">More articles</button>
+      <button href="/blog.html" class="btn btn-primary btn-lg ">More articles</button>
   </div>
 </div>
 
