--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
     <nav class="navbar bg-transparent navbar-light p-3 navbar-expand-lg">
         <div class="container">
          
-            <a href="/blog.html" class="navbar-brand">WEB HOSTING CA.</a>
+            <a href="/" class="navbar-brand">WEB HOSTING CA.</a>
             <div class="navbar-brand">
                 <a href="#" class="navbar-left">
                   
@@ -33,16 +33,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto" >
                     <li class="nav-item">
-                        <a href="/blog.html" class="nav-link ">Blog</a>
+                        <a href="/blog" class="nav-link ">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/read_more.html" class="nav-link">Read mroe</a>
+                        <a href="/read_more" class="nav-link">Read mroe</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/registration.html" class="nav-link">Sign up</a>
+                        <a href="/registration" class="nav-link">Sign up</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/login.html" class="nav-link">Log in</a>
+                        <a href="/login" class="nav-link">Log in</a>
                     </li>
                 </ul>
                 <!-- This is the search bar! -->
