--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto" >
                     <li class="nav-item">
-                        <a href="/blog" class="nav-link ">Blog</a>
+                        <a href="/" class="nav-link ">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a href="/read_more" class="nav-link">Read mroe</a>
