--- a/read_more.html
+++ b/read_more.html
@@ -20,7 +20,7 @@
                 </a>
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
-                        <img alt="Brand" style="max-width:100px;margin-top:-7px;"  src="/image/webHosting.png">
+                        <img alt="Brand" style="max-width:100px;margin-top:-7px;"  src="/webHosting.png">
                     </a>
                 </div>
             </div>
@@ -55,7 +55,7 @@
  <!-- Article 內容部分開始！ --> 
 <div class="article-cover  ">
   <div class="article-cover-inner">
-   <img class="article-cover-img y-5 d-block mx-auto" src="/image/article.jpeg" alt="" width="mx-auto"
+   <img class="article-cover-img y-5 d-block mx-auto" src="/article.jpeg" alt="" width="mx-auto"
    height="mx-auto" />
   </div>
 </div>
@@ -120,7 +120,7 @@
             <div class="card-body">
               <div class="d-flex flex-start align-items-center">
                 <img class="rounded-circle shadow-1-strong me-3"
-                  src="/image/user1.png" alt="avatar" width="60"
+                  src="/user1.png" alt="avatar" width="60"
                   height="60" />
                 <div>
                   <h6 class="fw-bold text-primary mb-1">User koala73</h6>
@@ -153,7 +153,7 @@
             <div class="card-footer py-3 border-0" style="background-color: #f8f9fa;">
               <div class="d-flex flex-start w-100">
                 <img class="rounded-circle shadow-1-strong me-3"
-                  src="/image/user2.png" alt="avatar" width="40"
+                  src="/user2.png" alt="avatar" width="40"
                   height="40" />
                 <div class="form-outline w-100">
                   <textarea class="form-control" id="textAreaExample" rows="4"
