--- a/registration.html
+++ b/registration.html
@@ -25,7 +25,7 @@
             </a>
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">
-                    <img alt="Brand" style="max-width:100px;margin-top:-7px;"  src="/image/webHosting.png">
+                    <img alt="Brand" style="max-width:100px;margin-top:-7px;"  src="/webHosting.png">
                 </a>
             </div>
         </div>
@@ -194,7 +194,7 @@
                     </div>
                     <input class="btn btn-success w-100" type="submit" value="SIGN UP">
                 </form>
-                <a href="/login.html" class="nav-link container align-item-center justify-content-between d-flex ">Already have an account? Log in</a>
+                <a href="/login" class="nav-link container align-item-center justify-content-between d-flex ">Already have an account? Log in</a>
             </div>
         
   
