--- a/read_more.html
+++ b/read_more.html
@@ -33,10 +33,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto" >
                     <li class="nav-item">
-                        <a href="/blog" class="nav-link ">Blog</a>
+                        <a href="/" class="nav-link ">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/read_more" class="nav-link">Read mroe</a>
+                        <a href="/article" class="nav-link">Read mroe</a>
                     </li>
                     <li class="nav-item">
                         <a href="/registration" class="nav-link">Sign up</a>
